--- a/views/NewProduct.hbs
+++ b/views/NewProduct.hbs
@@ -28,16 +28,17 @@
     <form action = "/doInsert" method="post">
     <center>
         Name:         <input type="text" name="txtName" id="">
-                   {{error.name}}
+                   {{!-- {{error.name}} --}}
         <br><br>
         Price:        <input type="text" name="txtPrice" id = "">
-                   {{error.price}}
+                   {{!-- {{error.price}} --}}
         <br><br>
         Color:        <input type ="text" name="txtColor" id="">
         <br><br>
         Category :        <input type="text" name="txtCategory" id="">
-        <br><br>
-        <input type="submit" onsubmit="" value ="CREATE A PRODUCT">
+        <br><br> 
+        <input type="submit" onsubmit="" value ="CREATE A PRODUCT"><br>
+       
     </center>   
     </form>
     <br>
